--- a/models/final_model_gs.yaml
+++ b/models/final_model_gs.yaml
@@ -1,21 +1,50 @@
-classifier: !!python/object:sklearn.svm._classes.SVC
-  C: 1.0
+classifier: !!python/object:sklearn.ensemble._forest.RandomForestClassifier
   _sklearn_version: 1.3.1
-  break_ties: false
-  cache_size: 200
+  base_estimator: deprecated
+  bootstrap: true
+  ccp_alpha: 0.0
   class_weight: null
-  coef0: 0.0
-  decision_function_shape: ovr
-  degree: 3
-  epsilon: 0.0
-  gamma: scale
-  kernel: rbf
-  max_iter: -1
-  nu: 0.0
-  probability: false
+  criterion: gini
+  estimator: !!python/object:sklearn.tree._classes.DecisionTreeClassifier
+    _sklearn_version: 1.3.1
+    ccp_alpha: 0.0
+    class_weight: null
+    criterion: gini
+    max_depth: null
+    max_features: null
+    max_leaf_nodes: null
+    min_impurity_decrease: 0.0
+    min_samples_leaf: 1
+    min_samples_split: 2
+    min_weight_fraction_leaf: 0.0
+    random_state: null
+    splitter: best
+  estimator_params: !!python/tuple
+  - criterion
+  - max_depth
+  - min_samples_split
+  - min_samples_leaf
+  - min_weight_fraction_leaf
+  - max_features
+  - max_leaf_nodes
+  - min_impurity_decrease
+  - random_state
+  - ccp_alpha
+  max_depth: null
+  max_features: sqrt
+  max_leaf_nodes: null
+  max_samples: null
+  min_impurity_decrease: 0.0
+  min_samples_leaf: 1
+  min_samples_split: 2
+  min_weight_fraction_leaf: 0.0
+  n_estimators: 100
+  n_jobs: null
+  oob_score: false
   random_state: null
-  shrinking: true
-  tol: 0.001
-  verbose: false
-classifier__C: 0.1
-selectkbest__k: 6
+  verbose: 0
+  warm_start: false
+classifier__max_depth: 7
+classifier__n_estimators: 500
+scaler: null
+selectkbest__k: 8
