--- a/models/final_model_gs.yaml
+++ b/models/final_model_gs.yaml
@@ -45,6 +45,10 @@ classifier: !!python/object:sklearn.ensemble._forest.RandomForestClassifier
   verbose: 0
   warm_start: false
 classifier__max_depth: 7
-classifier__n_estimators: 500
-scaler: null
-selectkbest__k: 8
+classifier__n_estimators: 100
+scaler: !!python/object:sklearn.preprocessing._data.StandardScaler
+  _sklearn_version: 1.3.1
+  copy: true
+  with_mean: true
+  with_std: true
+selectkbest__k: 7
